# brain-learn

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: brain.py  function.py  genetic.py  logger.py  program.py  utils.py
tests/: run_tests.py  test_genetic.py  test_integration.py  test_program.py  test_program_unit.py
